criação do cafe.html
pego exemplo no ws3school

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Site Bruno</title>
 </head>
 <body>
+<div style="border: solid;">
     <h1>Teste do Site</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-  praesentium aut nihil, hic ducimus, ab autem ipsam ullam repellat dolorum
-  sequi ut omnis saepe ea blanditiis iure numquam nesciunt! Dolor?</p>
+    <h2>3</h2>
+    <h3>3</h3>
+    <h4>3</h4>
+    <h5>3</h5>
+  <p>hack = saber web, javascrip, php</p>
+    <a href="cafe.html"> jsfhjksdfjhsdjkfahjskd</a>
+</div>
 </body>
 </html>
